--- a/backend/data/releases.json
+++ b/backend/data/releases.json
@@ -4,11 +4,11 @@
     "account_name": "ALTICE",
     "release_date": "2025-10-16",
     "executor": "Vibek Mandal",
-    "status": "In Progress",
+    "status": "Blocked",
     "notes": "",
     "release_version": "R25.05",
     "created_at": "2025-09-30T13:50:51.747Z",
-    "updated_at": "2025-10-01T12:42:44.556Z"
+    "updated_at": "2025-10-03T10:12:53.157Z"
   },
   {
     "id": 2,
@@ -26,11 +26,11 @@
     "account_name": "CMM",
     "release_date": "2025-10-31",
     "executor": "Yachana",
-    "status": "In Progress",
+    "status": "Blocked",
     "notes": "",
     "release_version": "R26.01",
     "created_at": "2025-10-01T11:44:22.399Z",
-    "updated_at": "2025-10-01T13:54:19.208Z"
+    "updated_at": "2025-10-03T10:08:49.178Z"
   },
   {
     "id": 4,
