--- a/backend/data/releases.json
+++ b/backend/data/releases.json
@@ -2,78 +2,59 @@
   {
     "id": 1,
     "account_name": "ALTICE",
-    "release_date": "2025-10-16",
+    "release_date": "2025-10-10",
     "executor": "Vibek Mandal",
-    "status": "Blocked",
+    "status": "Completed",
     "notes": "",
-    "release_version": "R25.05",
-    "created_at": "2025-09-30T13:50:51.747Z",
-    "updated_at": "2025-10-03T10:12:53.157Z"
+    "release_version": "R24.05",
+    "created_at": "2025-10-03T13:44:17.056Z",
+    "completion_date": "2025-10-03",
+    "time_taken_hours": "3",
+    "defects_raised": "1",
+    "defect_details": "acmp-123: xvcd",
+    "completion_notes": "",
+    "defects": [
+      {
+        "id": 1759506828840,
+        "defect_id": "acmp-123",
+        "description": "xvcd",
+        "severity": "Medium",
+        "status": "Open"
+      }
+    ],
+    "updated_at": "2025-10-03T15:53:58.021Z"
   },
   {
     "id": 2,
-    "account_name": "PLDT",
-    "release_date": "2025-10-08",
-    "executor": "Rohit",
-    "status": "Scheduled",
-    "notes": "",
-    "release_version": "R26.09",
-    "created_at": "2025-09-30T14:24:31.706Z",
-    "updated_at": "2025-10-01T13:10:56.152Z"
-  },
-  {
-    "id": 3,
-    "account_name": "CMM",
-    "release_date": "2025-10-31",
-    "executor": "Yachana",
-    "status": "Blocked",
-    "notes": "",
-    "release_version": "R26.01",
-    "created_at": "2025-10-01T11:44:22.399Z",
-    "updated_at": "2025-10-03T10:08:49.178Z"
-  },
-  {
-    "id": 4,
-    "account_name": "3IR",
-    "release_date": "2025-10-03",
+    "account_name": "VIL",
+    "release_date": "2025-10-30",
     "executor": "Kishan",
     "status": "Scheduled",
     "notes": "",
-    "release_version": "R26.01",
-    "created_at": "2025-10-01T11:47:20.525Z",
-    "updated_at": "2025-10-01T13:03:06.719Z"
+    "release_version": "R24.09",
+    "created_at": "2025-10-03T13:44:45.790Z",
+    "completion_date": null,
+    "time_taken_hours": null,
+    "defects_raised": "0",
+    "defect_details": "",
+    "completion_notes": "",
+    "defects": []
   },
   {
-    "id": 5,
-    "account_name": "CHARTER",
-    "release_date": "2025-10-15",
-    "executor": "Rohit",
-    "status": "In Progress",
-    "notes": "",
-    "release_version": "R26.02",
-    "created_at": "2025-10-01T11:51:40.305Z",
-    "updated_at": "2025-10-01T12:41:13.341Z"
-  },
-  {
-    "id": 6,
-    "account_name": "3UK",
-    "release_date": "2025-10-09",
-    "executor": "Vibek",
-    "status": "Scheduled",
-    "notes": "",
-    "release_version": "R26.02",
-    "created_at": "2025-10-01T13:11:29.204Z",
-    "updated_at": "2025-10-01T13:11:29.204Z"
-  },
-  {
-    "id": 7,
-    "account_name": "CMM",
-    "release_date": "2025-10-01",
+    "id": 3,
+    "account_name": "TMO",
+    "release_date": "2025-10-03",
     "executor": "Rohit",
     "status": "Completed",
     "notes": "",
-    "release_version": "R25.05",
-    "created_at": "2025-10-01T13:40:57.978Z",
-    "updated_at": "2025-10-01T13:40:57.978Z"
+    "release_version": "R24.05",
+    "created_at": "2025-10-03T13:45:14.853Z",
+    "updated_at": "2025-10-03T15:51:56.323Z",
+    "completion_date": null,
+    "time_taken_hours": null,
+    "defects_raised": "0",
+    "defect_details": "",
+    "completion_notes": "",
+    "defects": []
   }
 ]
