--- a/backend/data/available_releases.json
+++ b/backend/data/available_releases.json
@@ -5,18 +5,18 @@
     "description": "Monitoring Upgrade Certification (R24.05 --> R24.09",
     "features": [
       {
-        "id": 1759508414841,
-        "name": "zsgzgs",
-        "description": "fdgfg"
+        "id": 1759653251489,
+        "name": " Platform Upgrade Certification",
+        "description": "Background: AGS Management took a decision to 1) All accounts to be upgraded to Platform env to R24.05 as BAU and 2) allow the accounts to skip upgrading Platform to R24.07. As a result, we understand that most of the accounts will be with R4.05 when it is the time to upgrade to R24.09 (with some of the accounts on R24.07). Objective: Allow the accounts that opted out of upgrading to R24.07, to smoothly upgrade to R24.09. Assumptions: We are considering only the accounts that will be on R24.05 Requirements: Certify that Platform can be upgrade from R24.05 to R24.09 Certify that BWC of Platform with Monitoring Consider Cloud Upgrades impacting Digital Teams"
       },
       {
-        "id": 1759508421492,
-        "name": "dafgfd",
-        "description": "gdfg"
+        "id": 1759653268778,
+        "name": "OneOps - OCB SPoG improvement",
+        "description": "Requirements: SPoG to sort the cycles based on the Cycle Date and Cycle Sequence ID (CR - ACMP-79990) OCB will enhance the response of the API and expose the CYCLE DATE (Date/Time when cycle was triggered in OCB) SPoG to show cycles as concatenation of Cycle Name, Cycle Code and Cycle Sequence (CR - ACMP-74501) RR - R24.09 _ ACMP-81569 - OneOps - OCB SPoG improvement _ RR-20240711_103237-Meeting Recording.mp4 Demo - ACMP R24.09 Sprint _2 ready features demos-20240801_183605-Meeting Recording.mp4 (until min 05:00) Release notes - https://confluence/display/RMA/R24.09+-+Monitoring+Release+notes#R24.09MonitoringReleasenotes-OneOps-"
       }
     ],
     "created_at": "2025-10-03T13:40:32.479Z",
-    "updated_at": "2025-10-03T16:20:23.011Z"
+    "updated_at": "2025-10-05T08:34:35.967Z"
   },
   {
     "id": 2,
