--- a/backend/data/releases.json
+++ b/backend/data/releases.json
@@ -10,11 +10,26 @@
     "created_at": "2025-10-03T13:44:17.056Z",
     "completion_date": "2025-10-03",
     "time_taken_hours": "3",
-    "defects_raised": "0",
-    "defect_details": "",
-    "completion_notes": "",
-    "defects": [],
-    "updated_at": "2025-10-03T17:47:07.754Z"
+    "defects_raised": "2",
+    "defect_details": "ACMP-123: ACMP-123 is an upgrade Defect; ACMP-1234: This Defect is impacting Maintenance window",
+    "completion_notes": "Sanity Done, everything is working fine",
+    "defects": [
+      {
+        "id": 1759575246924,
+        "defect_id": "ACMP-123",
+        "description": "ACMP-123 is an upgrade Defect",
+        "severity": "Medium",
+        "status": "Open"
+      },
+      {
+        "id": 1759653289849,
+        "defect_id": "ACMP-1234",
+        "description": "This Defect is impacting Maintenance window",
+        "severity": "Medium",
+        "status": "Open"
+      }
+    ],
+    "updated_at": "2025-10-05T08:35:23.587Z"
   },
   {
     "id": 2,
@@ -99,7 +114,7 @@
     "executor": "Yachana",
     "status": "In Progress",
     "notes": "",
-    "release_version": "R24.05",
+    "release_version": "R24.09",
     "completion_date": null,
     "time_taken_hours": null,
     "defects_raised": "0",
@@ -107,6 +122,6 @@
     "completion_notes": "",
     "defects": [],
     "created_at": "2025-10-03T16:24:37.287Z",
-    "updated_at": "2025-10-03T17:51:00.534Z"
+    "updated_at": "2025-10-05T08:09:31.312Z"
   }
 ]
