--- a/backend/data/available_releases.json
+++ b/backend/data/available_releases.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "name": "R24.05",
+    "name": "MON-R24.05",
     "description": "Monitoring Upgrade Certification (R24.05 --> R24.09",
     "features": [
       {
@@ -16,11 +16,11 @@
       }
     ],
     "created_at": "2025-10-03T13:40:32.479Z",
-    "updated_at": "2025-10-05T08:34:35.967Z"
+    "updated_at": "2025-10-09T10:41:18.342Z"
   },
   {
     "id": 2,
-    "name": "R24.09",
+    "name": "MON-R24.09",
     "description": "R24.09",
     "features": [
       {
@@ -35,6 +35,14 @@
       }
     ],
     "created_at": "2025-10-03T13:43:38.073Z",
-    "updated_at": "2025-10-03T15:56:32.299Z"
+    "updated_at": "2025-10-08T11:06:55.192Z"
+  },
+  {
+    "id": 3,
+    "name": "SRE-R24.09",
+    "description": "SRE",
+    "features": [],
+    "created_at": "2025-10-08T11:26:03.429Z",
+    "updated_at": "2025-10-08T11:26:30.481Z"
   }
 ]
