--- a/backend/data/releases.json
+++ b/backend/data/releases.json
@@ -6,7 +6,7 @@
     "executor": "Vibek Mandal",
     "status": "Completed",
     "notes": "",
-    "release_version": "R24.05",
+    "release_version": "MON-R24.09",
     "created_at": "2025-10-03T13:44:17.056Z",
     "completion_date": "2025-10-03",
     "time_taken_hours": "3",
@@ -29,18 +29,18 @@
         "status": "Open"
       }
     ],
-    "updated_at": "2025-10-07T10:00:39.527Z",
+    "updated_at": "2025-10-08T12:42:12.215Z",
     "product": "Monitoring",
     "environment": "PROD"
   },
   {
     "id": 2,
-    "account_name": "PLDT",
-    "release_date": "2025-10-30",
+    "account_name": "ALTICE",
+    "release_date": "2025-10-10",
     "executor": "Kishan",
     "status": "Scheduled",
     "notes": "",
-    "release_version": "R24.09",
+    "release_version": "MON-R24.09",
     "created_at": "2025-10-03T13:44:45.790Z",
     "completion_date": null,
     "time_taken_hours": null,
@@ -48,45 +48,37 @@
     "defect_details": "",
     "completion_notes": "",
     "defects": [],
-    "updated_at": "2025-10-07T10:42:43.043Z",
+    "updated_at": "2025-10-08T11:33:29.228Z",
     "product": "Monitoring",
     "environment": "PROD"
   },
   {
     "id": 3,
     "account_name": "TMO",
-    "release_date": "2025-10-03",
+    "release_date": "2025-10-10",
     "executor": "Rohit",
-    "status": "Completed",
+    "status": "Scheduled",
     "notes": "",
-    "release_version": "R24.05",
+    "release_version": "MON-R24.09",
     "created_at": "2025-10-03T13:45:14.853Z",
-    "updated_at": "2025-10-07T10:41:59.519Z",
+    "updated_at": "2025-10-09T12:52:06.687Z",
     "completion_date": "2025-10-03",
     "time_taken_hours": "5",
-    "defects_raised": "1",
-    "defect_details": "zdfgfh-57657: sdgsh",
+    "defects_raised": "0",
+    "defect_details": "",
     "completion_notes": "",
-    "defects": [
-      {
-        "id": 1759508473592,
-        "defect_id": "zdfgfh-57657",
-        "description": "sdgsh",
-        "severity": "Medium",
-        "status": "Open"
-      }
-    ],
+    "defects": [],
     "product": "Monitoring",
     "environment": "PROD"
   },
   {
     "id": 4,
     "account_name": "3IR",
-    "release_date": "2025-10-06",
+    "release_date": "2025-10-10",
     "executor": "Rohit",
     "status": "Scheduled",
     "notes": "",
-    "release_version": "R24.09",
+    "release_version": "SRE-R24.09",
     "completion_date": null,
     "time_taken_hours": null,
     "defects_raised": "0",
@@ -94,7 +86,7 @@
     "completion_notes": "",
     "defects": [],
     "created_at": "2025-10-03T16:22:21.313Z",
-    "updated_at": "2025-10-07T10:41:20.106Z",
+    "updated_at": "2025-10-09T10:37:13.391Z",
     "product": "SRE",
     "environment": "DEV"
   },
@@ -104,8 +96,8 @@
     "release_date": "2025-10-08",
     "executor": "Vibek Mandal",
     "status": "Blocked",
-    "notes": "Blocked due to space issue Blocked due to space issueBlocked due to space issue Blocked due to space issue Blocked due to space issueBlocked due to space issue Blocked due to space issue Blocked due to space issueBlocked due to space issueBlocked due to space issue Blocked due to space issueBlocked due to space issue\n\\",
-    "release_version": "R24.09",
+    "notes": "Space Issue\n",
+    "release_version": "MON-R24.09",
     "completion_date": null,
     "time_taken_hours": null,
     "defects_raised": "0",
@@ -113,18 +105,18 @@
     "completion_notes": "",
     "defects": [],
     "created_at": "2025-10-03T16:23:10.273Z",
-    "updated_at": "2025-10-07T10:40:57.680Z",
+    "updated_at": "2025-10-09T10:41:06.553Z",
     "product": "Monitoring",
     "environment": "PROD"
   },
   {
     "id": 6,
     "account_name": "CHARTER",
-    "release_date": "2025-10-03",
+    "release_date": "2025-10-09",
     "executor": "Yachana",
-    "status": "In Progress",
+    "status": "Scheduled",
     "notes": "",
-    "release_version": "R24.09",
+    "release_version": "MON-R24.09",
     "completion_date": null,
     "time_taken_hours": null,
     "defects_raised": "0",
@@ -132,8 +124,65 @@
     "completion_notes": "",
     "defects": [],
     "created_at": "2025-10-03T16:24:37.287Z",
-    "updated_at": "2025-10-07T10:42:28.882Z",
+    "updated_at": "2025-10-09T10:16:44.410Z",
     "product": "Monitoring",
     "environment": "DR"
+  },
+  {
+    "id": 7,
+    "account_name": "ALTICE",
+    "release_date": "2025-10-10",
+    "executor": "Vibek Mandal",
+    "status": "Scheduled",
+    "notes": "",
+    "release_version": "SRE-R24.09",
+    "product": "SRE",
+    "environment": "PROD",
+    "completion_date": null,
+    "time_taken_hours": null,
+    "defects_raised": "0",
+    "defect_details": "",
+    "completion_notes": "",
+    "defects": [],
+    "created_at": "2025-10-08T12:45:54.998Z",
+    "updated_at": "2025-10-08T12:45:54.999Z"
+  },
+  {
+    "id": 8,
+    "account_name": "ALTICE",
+    "release_date": "2025-10-14",
+    "executor": "Vibek Mandal",
+    "status": "Scheduled",
+    "notes": "",
+    "release_version": "MON-R24.05",
+    "product": "Monitoring",
+    "environment": "PROD",
+    "completion_date": null,
+    "time_taken_hours": null,
+    "defects_raised": "0",
+    "defect_details": "",
+    "completion_notes": "",
+    "defects": [],
+    "created_at": "2025-10-09T12:53:08.378Z",
+    "updated_at": "2025-10-09T12:53:08.378Z"
+  },
+  {
+    "id": 9,
+    "account_name": "CMM",
+    "release_date": "2025-10-14",
+    "executor": "Yachana",
+    "status": "Scheduled",
+    "notes": "",
+    "release_version": "MON-R24.05",
+    "product": "SRE",
+    "environment": "PROD",
+    "completion_date": null,
+    "time_taken_hours": null,
+    "defects_raised": "0",
+    "defect_details": "",
+    "completion_notes": "",
+    "defects": [],
+    "created_at": "2025-10-09T12:53:30.759Z",
+    "updated_at": "2025-10-09T12:53:30.759Z"
   }
 ]
